# Agentic-Gateway-Protocol

./: ARCHITECTURE.md  README.md  manage.sh  pyproject.toml  setup.sh  test_core.txt
src/agp/: __init__.py  agent.py  health.py
src/agp/bus/: __init__.py  events.py  queue.py
src/agp/channels/: __init__.py  base.py  manager.py  telegram.py
src/agp/cli/: __init__.py  commands.py
src/agp/config/: __init__.py  loader.py  schema.py
src/agp/cron/: __init__.py  service.py  types.py
src/agp/heartbeat/: __init__.py  service.py
src/agp/memory/: __init__.py  sessions.py  store.py
src/agp/tools/: __init__.py  message.py  schedule.py
workspace/: AGENTS.md  SOUL.md  USER.md
workspace/memory/: MEMORY.md
