[project]
name = "agp"
version = "0.1.0"
description = "AGP - Agentic Gateway Protocol"
requires-python = ">=3.10"
dependencies = [
    "claude-agent-sdk>=0.1.0",
    "python-telegram-bot[job-queue]>=20.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "anyio>=4.0.0",
    "typer>=0.12.0",
    "croniter>=2.0.0",
    "python-dotenv>=1.0.0",
]
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
agp = "agp.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agp"]
